{
    "name": "BallInputActions",
    "maps": [
        {
            "name": "Ball",
            "id": "f6bbf537-cc01-49c8-bf6f-da45ee406e13",
            "actions": [
                {
                    "name": "press",
                    "type": "Button",
                    "id": "12d2aa65-99a6-47e2-8c70-d07bd016509b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "screenPos",
                    "type": "Value",
                    "id": "803bab42-acbe-4b6f-8386-5a8b0557e4f7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "scrollZ",
                    "type": "Value",
                    "id": "1dcdbc63-329e-49d6-8630-5d7dd1970af2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "altScrollZ",
                    "type": "Value",
                    "id": "2192a881-64a9-4911-8250-021fdc963c48",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "17e4ad01-8015-4684-ab3f-8f186959d72d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "screenPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbd81eb9-29d8-482f-b44f-a983e80227cf",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "screenPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52b988e6-7650-4362-b4f7-23173a21bb4b",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "scrollZ",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9afa71d5-15ff-44a3-91b8-af874c9e76d0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "press",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fc544fb-ca62-4be3-9667-abd9fdfe5539",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "press",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Two Modifiers",
                    "id": "85d4ad4d-c21f-4573-8a00-bcbfd02a5488",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "altScrollZ",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "8363aeb3-311b-44bd-8837-f2960e33aec4",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "altScrollZ",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "5731ccb3-0d05-48bf-a7a8-3150c70e24be",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "altScrollZ",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "96f7963c-e3d4-46c6-a769-2b7a5afcec64",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "altScrollZ",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}